...
                    cardBg = cardBgColor
                )
            }

            if (displayedTasks.isEmpty()) {
                item {
                    Box(modifier = Modifier.testTag("empty_state")) { // TAG FOR TESTING
                        EmptyStateView(borderColor, mutedTextColor, cardBgColor)
                    }
                }
            } else {
                items(displayedTasks, key = { it.id }) { task ->
                    TaskItemCard(
...
            ),
            shape = RoundedCornerShape(8.dp),
            modifier = Modifier
                .fillMaxWidth()
                .height(50.dp)
                .background(cardBg)
                .testTag("search_bar") // TAG FOR TESTING
        )
    }
}


@Composable
...
        Column(modifier = Modifier.padding(16.dp)) {
            Row(verticalAlignment = Alignment.CenterVertically) {
                Checkbox(
                    checked = task.isFinished,
                    onCheckedChange = { onTaskToggle(task) },
                    colors = CheckboxDefaults.colors(checkedColor = StudyGreenLevel4),
                    modifier = Modifier.testTag("task_checkbox") // TAG FOR TESTING
                )
                Column(modifier = Modifier.weight(1f)) {
                    Text(
                        text = task.title,
                        fontWeight = FontWeight.Bold,
                        fontSize = 16.sp,
...
                            Spacer(Modifier.width(4.dp))
                            Text(if (task.logTime > 0) "${task.logTime}m" else "Log", color = StatusYellow, fontSize = 14.sp)
                        }

                        IconButton(
                            onClick = { onEdit(task) },
                            modifier = Modifier.testTag("edit_button") // TAG FOR TESTING
                        ) {
                            Icon(Icons.Outlined.Edit, null, tint = EditBlue)
                        }
                        IconButton(
                            onClick = { onDelete(task) },
                            modifier = Modifier.testTag("delete_button") // TAG FOR TESTING
                        ) {
                            Icon(Icons.Outlined.Delete, null, tint = DeleteRed)
                        }
                    }
                }
            }
...
